Closed Bug 437975 Opened 16 years ago Closed 16 years ago

Can't send emails to non-mork mailing lists

Categories

(MailNews Core :: Composition, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9

People

(Reporter: standard8, Assigned: standard8)

References

Details

Attachments

(1 file)

Attached patch The fixSplinter Review
I'm not 100% sure if this is a regression, but I expect it is. In bug 437903 it was reported that we can't send to mailing lists for OS X directories. The problem I'll address here is that the nsMsgCompose::CheckAndPopulateRecipients function does not support finding mailing lists from other address book types, when it could easily do so. Currently, the function is trying to get the nsIMDBDirectory and its nsIAddrDatabase early on so it can use them to increase the popularity of the recipient in the database. As you'd expect, this fails for non-mork address books, and so the function doesn't get to the stage of finding the lists for those. This is a bit hard to test on its own, but the unit tests for the existing mork address books pass (they do exercise this function), Mac mailing lists will still fail due to bug 437903, outlook ones should work. Note whilst debugging this I also found that we weren't clearing the mailListArray between each loop, this didn't cause a major problem, but did mean we were iterating through the sum of all the mailing lists so far, rather than just the ones for the current directory.
Attachment #324269 - Flags: superreview?(bienvenu)
Attachment #324269 - Flags: review?(bienvenu)
Comment on attachment 324269 [details] [diff] [review] The fix I swear I encountered that not clearing the mailing list issue in an other place before.
Attachment #324269 - Flags: superreview?(bienvenu)
Attachment #324269 - Flags: superreview+
Attachment #324269 - Flags: review?(bienvenu)
Attachment #324269 - Flags: review+
Patch checked in -> fixed.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: