Bug 437975 Can't send emails to non-mork mailing lists. r/sr=bienvenu